fixed up spacing issues in listCard.css

--- a/frontend/src/ListCard.css
+++ b/frontend/src/ListCard.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1.5rem;
+    padding: 1rem;
     background-color: #fff;
     border: 0.1rem solid #ddd;
     border-radius: 0.5rem;
@@ -11,7 +11,8 @@
     text-decoration: none;
     color: inherit;
     width: 100%;
-    max-width: 20rem;
+    max-width: 10rem;
+    max-height: 10rem;
     margin: 1rem;
 }
 
@@ -20,13 +21,13 @@
 }
 
 .ListCard h3 {
-    font-size: 1.8rem;
+    font-size: 1.2rem;
     margin: 0.5rem 0;
     color: #333;
 }
 
 .ListCard p {
-    font-size: 1.2rem;
+    font-size: 1rem;
     color: #666;
     margin: 0.25rem 0;
 }
