--- a/frontend/src/Lists.css
+++ b/frontend/src/Lists.css
@@ -34,11 +34,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: aqua;
 }
 
 .Lists-lists {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
-    gap: 1.5rem;
+    grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
+    gap: 1rem;
 }
